[package]
name = "ipv4-geolocate-webservice"
version = "0.2.0"
authors = ["Max Neuvians <max.neuvians@cds-snc.ca>"]
edition = "2018"

[dependencies]
http-body-util = "0.1.0"
hyper = "1.1.0"
hyper-util = { version = "0.1.2", features = ["full"] }
maxminddb = "0.24.0"
pretty_env_logger = "0.5.0"
regex = "1.10.3"
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }